기능 구현, 리팩토링